--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link href="https://fonts.cdnfonts.com/css/fuehrer" rel="stylesheet">
                 
     <style>
-        @import url('https://fonts.cdnfonts.com/css/fuehrer');
+        @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
 
         body {
         background-image: url("assets/photo1.jpg");
     }
     h1{
-        font-size: 5em;
+        font-size: 3em;
         color: white;
-        font-family: 'fuehrer', sans-serif;
+        font-family: Bruno Ace SC;
     }
     </style>
 </head>
@@ -29,21 +28,22 @@
 <body>
     <div class="container" style="text-align: center;margin-bottom: 5%;margin-top: 2%;display: flex">
         <h1 style="margin-bottom: 2%">Push and don't release!</h1>
-        <div class="mb-3" style="display: flex;margin-left: 6%;margin-top: 2%;max-height: 3em">
+        <div class="mb-3" style="display: flex;margin-left: 16%;margin-top: 0.5%;max-height: 3em">
             <input type="text" class="form-control" id="in" placeholder="Youtube URL">
             <div class="form-check form-switch" style="margin-top: 3%;margin-left: 1%">
               <input class="form-check-input" onClick="muting()" type="checkbox" id="flexSwitchCheckDefault">
               <label class="form-check-label" style="color: white" for="flexSwitchCheckDefault">Mute</label>
             </div>
-            <button type="submit" onClick="getId()" class="btn btn-outline-warning" style="margin-left: 2%">Submit</button>
+            <button type="submit" onClick="getId()" class="btn btn-outline-primary" style="margin-left: 2%">Submit</button>
         </div>
     </div>
+
     <div class="container" style="white-space: nowrap">
         <div class="container" style="text-align: center;display: inline-block;width: 50%;vertical-align: top;">
             <div style="background-color: grey;height: 24em" id="video-container"></div>
         </div>
         <div class="container" style="text-align: center;display: inline-block;width: 50%;vertical-align: top;margin-top: 12%">
-            <a id="button" class="btn btn-danger btn-lg" role="submit">Button</a>
+            <a id="button" class="btn btn-primary btn-lg" role="submit">Button</a>
         </div>
     </div>
 
